<resources>
    <string name="app_name">Auto Control Brasil</string>

    <string name="hello_world">Hello world!</string>
    <string name="menu_novo_veiculo">Novo Veículo</string>
    <string name="menu_nova_foto">Tirar foto</string>
    <string name="menu_abrir_cadastro_veiculo">Veículo</string>
    <string name="nome_veiculo">Veículo</string>
    <string name="nome_ano">Ano</string>
    <string name="nome_placa">Placa</string>
    <string name="acao_salvar">Salvar</string>
    <string name="troca_oleo_filtro">Óleo, filtro...(mil Km)</string>
    <string name="troca_pneu_freio">Pneus, freio...(mil Km)</string>
    <string name="revisao_geral">Revisao geral (mil Km)</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_listar_abastecimentos">ListarAbastecimentos</string>
    <string name="title_activity_lista_abastecimentos">ListaAbastecimentos</string>
    <string name="title_activity_inclusao_abastecimento">InclusaoAbastecimentoActivity</string>

    <string name="km_anterior">Km Anterior</string>
    <string name="km_atual">Km Atual</string>
    <string name="litros">Litros</string>
    <string name="media">Média</string>
    <string name="valor_total">Valor Total</string>
    <string name="menu_novo_abastecimento">Novo Abastecimento</string>
    <string name="menu_abastecimentos">Abastecimentos</string>
    <string name="title_activity_manutencao">Manutenção</string>
    <string name="troca_oleo_filtro_descricao">Troca de óleo e filtros</string>
    <string name="troca_pneu_freio_descricao">Pneus, freio e suspenção</string>
    <string name="troca_revisao_geral_descricao">Revisão geral do veículo</string>
    <string name="ultima_troca">Última troca</string>
    <string name="proxima_troca">Próxima troca</string>
    <string name="menu_manutencao">Manutenção</string>
    <string name="label_ultimo_abastecimento">Último abastecimento</string>
    <string name="label_data">Data</string>
    <string name="label_km">Km</string>
    <string name="label_oleo_filtro">Óleo e filtros</string>
    <string name="label_pneu_freio_suspensao">Pneus, freio, suspensão</string>
    <string name="label_revisao_geral">Revisão Geral</string>
    <string name="label_proxima_manutencoes">Próximas Manutenções</string>
    <string name="title_activity_lista_precos">ListaPrecosActivity</string>
    <string name="title_activity_mapa_posto">Map</string>
</resources>
